@@ -67,18 +67,18 @@
 
     <properties>
         <!-- 版本号统一管理，只能用 revision -->
-        <revision>1.1.3-M2-java8</revision>
+        <revision>1.1.3-java8</revision>
 
-        <aspectj.version>1.9.7</aspectj.version>
+        <aspectj.version>1.9.23</aspectj.version>
         <asm.version>9.6</asm.version>
         <javassist.version>3.30.2-GA</javassist.version>
-        <netty.version>4.1.115.Final</netty.version>
+        <netty.version>4.1.122.Final</netty.version>
         <reactive.streams.version>1.0.4</reactive.streams.version>
-        <reactor.core.version>3.6.0</reactor.core.version>
-        <reactor.netty.version>1.2.1</reactor.netty.version>
+        <reactor.core.version>3.7.7</reactor.core.version>
+        <reactor.netty.version>1.2.7</reactor.netty.version>
         <ognl.version>3.4.5</ognl.version>
-        <jackson.version>2.16.2</jackson.version>
-        <snakeyaml.version>2.2</snakeyaml.version>
+        <jackson.version>2.19.1</jackson.version>
+        <snakeyaml.version>2.3</snakeyaml.version>
         <jfinal.enjoy.version>5.1.3</jfinal.enjoy.version>
         <freemarker.version>2.3.30</freemarker.version>
         <commons.compress.version>1.21</commons.compress.version>
@@ -95,15 +95,15 @@
         <protobuf.java.version>3.23.2</protobuf.java.version>
         <java.websocket.version>1.5.3</java.websocket.version>
 
-        <druid.version>1.2.23</druid.version>
-        <hikari.version>4.0.3</hikari.version>
+        <druid.version>1.2.25</druid.version>
+        <hikari.version>6.3.0</hikari.version>
         <tomcat.jdbc.version>11.0.0-M15</tomcat.jdbc.version>
         <mysql.version>8.0.16</mysql.version>
         <oracle14.version>10.2.0.4.0</oracle14.version>
         <mssql.version>7.4.0.jre8</mssql.version>
-        <redisson-version>3.40.2</redisson-version>
-        <lettuce.version>6.1.5.RELEASE</lettuce.version>
-        <mybatis.version>3.5.16</mybatis.version>
+        <redisson-version>3.50.0</redisson-version>
+        <lettuce.version>6.6.0.RELEASE</lettuce.version>
+        <mybatis.version>3.5.19</mybatis.version>
 
         <k-jte.version>1.0-SNAPSHOT</k-jte.version>
         <loveqq.framework.version>${revision}</loveqq.framework.version>
@@ -133,7 +133,9 @@
 
         <boot-lib-output>boot-lib</boot-lib-output>
         <boot-main-class>com.kfyty.loveqq.framework.core.support.BootLauncher</boot-main-class>
-        <boot-start-class></boot-start-class>
+
+        <!-- 用户启动类，这里注释掉是因为 ant 插件需要判断该配置，仅需用户启动类存在时，才需要构建 jar index -->
+        <!-- <boot-start-class></boot-start-class> -->
     </properties>
 
     <dependencies>
@@ -502,6 +504,7 @@
                         --add-opens=java.base/java.io=ALL-UNNAMED
                         --add-opens=java.base/java.nio=ALL-UNNAMED
                         --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                         --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                         --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED
                         --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
@@ -511,39 +514,83 @@
                     </argLine>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>${antrun.plugin.version}</version>
+                <executions>
+                    <!-- 构建配置元数据任务，在 verify 阶段后执行，因为用户一般使用打包阶段，该阶段自然不会执行(执行了也没什么问题) -->
+                    <execution>
+                        <id>build configuration metadata</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target name="metadata">
+                                <java fork="true"
+                                      classname="com.kfyty.loveqq.framework.core.support.task.BuildConfigurationMetadataAntTask"
+                                      classpathref="maven.compile.classpath">
+                                    <arg value="-OUTPUT_TYPE=${project.packaging}" />
+                                    <arg value="-OUTPUT_DIRECTORY=${project.build.directory}" />
+                                    <arg value="-OUTPUT_JAR=${project.build.finalName}.jar" />
+                                    <arg value="-OUTPUT_DEFAULT_JAR=${project.artifactId}-${project.version}.jar" />
+                                    <jvmarg value="--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED" />
+                                </java>
+                            </target>
+                        </configuration>
+                    </execution>
+
+                    <!-- 构建 jar index，下面 if 属性是指仅用户启动类存在时才构建 jar index，如此框架 jar 包自然不会构建 -->
+                    <execution>
+                        <id>build jar index</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target name="jar_index" if="boot-start-class">
+                                <java classname="com.kfyty.loveqq.framework.core.support.task.BuildJarIndexAntTask"
+                                      classpathref="maven.compile.classpath">
+                                    <arg value="-OUTPUT_TYPE=${project.packaging}" />
+                                    <arg value="-OUTPUT_DIRECTORY=${project.build.directory}" />
+                                    <arg value="-OUTPUT_JAR=${project.build.finalName}.jar" />
+                                    <arg value="-OUTPUT_DEFAULT_JAR=${project.artifactId}-${project.version}.jar" />
+                                </java>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant</artifactId>
+                        <version>${ant.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
 
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>${antrun.plugin.version}</version>
-                    <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>run</goal>
-                            </goals>
-                            <configuration>
-                                <target>
-                                    <java classname="com.kfyty.loveqq.framework.core.lang.task.BuildJarIndexAntTask" classpathref="maven.compile.classpath">
-                                        <arg value="-OUTPUT_DIRECTORY=${project.build.directory}" />
-                                        <arg value="-OUTPUT_JAR=${project.build.finalName}.jar" />
-                                        <arg value="-OUTPUT_DEFAULT_JAR=${project.artifactId}-${project.version}.jar" />
-                                    </java>
-                                </target>
-                            </configuration>
-                        </execution>
-                    </executions>
-
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.ant</groupId>
-                            <artifactId>ant</artifactId>
-                            <version>${ant.version}</version>
-                        </dependency>
-                    </dependencies>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${jar.plugin.version}</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <classpathPrefix>${boot-lib-output}/</classpathPrefix>
+                                <mainClass>${boot-main-class}</mainClass>
+                            </manifest>
+                            <manifestEntries>
+                                <Start-Class>${boot-start-class}</Start-Class>
+                            </manifestEntries>
+                        </archive>
+                    </configuration>
                 </plugin>
 
                 <plugin>
@@ -574,25 +621,6 @@
                             </goals>
                         </execution>
                     </executions>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>${jar.plugin.version}</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <!-- 框架不需要添加，子类打包时需要添加 -->
-                                <!-- <addClasspath>true</addClasspath> -->
-                                <classpathPrefix>${boot-lib-output}/</classpathPrefix>
-                                <mainClass>${boot-main-class}</mainClass>
-                            </manifest>
-                            <manifestEntries>
-                                <Start-Class>${boot-start-class}</Start-Class>
-                            </manifestEntries>
-                        </archive>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
